responsive profile page and fix main accordion

--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -76,7 +76,6 @@ nav {
     animation: l2 1s infinite linear;
 }
 
-
 @keyframes l2 {
     to {
         transform: rotate(1turn);
@@ -421,10 +420,10 @@ header .header-basket {
     border-radius: 25px;
     background: #303445;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25),
-    0px 6px 6px 0px rgba(0, 0, 0, 0.21),
-    0px 15px 9px 0px rgba(0, 0, 0, 0.13),
-    0px 26px 10px 0px rgba(0, 0, 0, 0.04),
-    0px 40px 11px 0px rgba(0, 0, 0, 0);
+        0px 6px 6px 0px rgba(0, 0, 0, 0.21),
+        0px 15px 9px 0px rgba(0, 0, 0, 0.13),
+        0px 26px 10px 0px rgba(0, 0, 0, 0.04),
+        0px 40px 11px 0px rgba(0, 0, 0, 0);
 }
 
 .introBG {
@@ -463,9 +462,9 @@ header .header-basket {
     margin-top: 10%;
     padding: 30px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25),
-    0px 6px 6px 0px rgba(0, 0, 0, 0.21),
-    0px 15px 9px 0px rgba(0, 0, 0, 0.13), 0px 26px 10px 0px #0000000a,
-    0px 40px 11px 0px rgba(0, 0, 0, 0);
+        0px 6px 6px 0px rgba(0, 0, 0, 0.21),
+        0px 15px 9px 0px rgba(0, 0, 0, 0.13), 0px 26px 10px 0px #0000000a,
+        0px 40px 11px 0px rgba(0, 0, 0, 0);
 }
 
 .targetBox .targetItem {
@@ -476,10 +475,10 @@ header .header-basket {
     padding-bottom: 10px;
     background: var(--primary-color);
     box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.44),
-    0px 17px 17px 0px rgba(0, 0, 0, 0.38),
-    0px 39px 23px 0px rgba(0, 0, 0, 0.23),
-    0px 69px 27px 0px rgba(0, 0, 0, 0.07),
-    0px 107px 30px 0px rgba(0, 0, 0, 0.01);
+        0px 17px 17px 0px rgba(0, 0, 0, 0.38),
+        0px 39px 23px 0px rgba(0, 0, 0, 0.23),
+        0px 69px 27px 0px rgba(0, 0, 0, 0.07),
+        0px 107px 30px 0px rgba(0, 0, 0, 0.01);
 }
 
 .targetBox > div > img {
@@ -540,10 +539,10 @@ header .header-basket {
     z-index: 1;
     background: var(--nav-color);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.44),
-    0px 45px 45px 0px rgba(0, 0, 0, 0.38),
-    0px 101px 60px 0px rgba(0, 0, 0, 0.23),
-    0px 179px 72px 0px rgba(0, 0, 0, 0.07),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 45px 45px 0px rgba(0, 0, 0, 0.38),
+        0px 101px 60px 0px rgba(0, 0, 0, 0.23),
+        0px 179px 72px 0px rgba(0, 0, 0, 0.07),
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 #roadmap .frontImg {
@@ -555,10 +554,10 @@ header .header-basket {
     border-radius: 25px;
     background: var(--nav-color);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.44),
-    0px 45px 45px 0px rgba(0, 0, 0, 0.38),
-    0px 101px 60px 0px rgba(0, 0, 0, 0.23),
-    0px 179px 72px 0px rgba(0, 0, 0, 0.07),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 45px 45px 0px rgba(0, 0, 0, 0.38),
+        0px 101px 60px 0px rgba(0, 0, 0, 0.23),
+        0px 179px 72px 0px rgba(0, 0, 0, 0.07),
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
     transform: translate(-60%, -20%);
 }
 
@@ -586,10 +585,10 @@ header .header-basket {
     transform: translate(40%, -25%);
     background: var(--nav-color);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.44),
-    0px 45px 45px 0px rgba(0, 0, 0, 0.38),
-    0px 101px 60px 0px rgba(0, 0, 0, 0.23),
-    0px 179px 72px 0px rgba(0, 0, 0, 0.07),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 45px 45px 0px rgba(0, 0, 0, 0.38),
+        0px 101px 60px 0px rgba(0, 0, 0, 0.23),
+        0px 179px 72px 0px rgba(0, 0, 0, 0.07),
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 #roadmap .backImg > img {
@@ -610,10 +609,10 @@ header .header-basket {
     transform: translate(-55%, -25%);
     background: var(--nav-color);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.44),
-    0px 45px 45px 0px rgba(0, 0, 0, 0.38),
-    0px 101px 60px 0px rgba(0, 0, 0, 0.23),
-    0px 179px 72px 0px rgba(0, 0, 0, 0.07),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 45px 45px 0px rgba(0, 0, 0, 0.38),
+        0px 101px 60px 0px rgba(0, 0, 0, 0.23),
+        0px 179px 72px 0px rgba(0, 0, 0, 0.07),
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 #roadmap .practiceImg > img {
@@ -636,10 +635,10 @@ header .header-basket {
     z-index: 1;
     background: var(--nav-color);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.44),
-    0px 45px 45px 0px rgba(0, 0, 0, 0.38),
-    0px 101px 60px 0px rgba(0, 0, 0, 0.23),
-    0px 179px 72px 0px rgba(0, 0, 0, 0.07),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 45px 45px 0px rgba(0, 0, 0, 0.38),
+        0px 101px 60px 0px rgba(0, 0, 0, 0.23),
+        0px 179px 72px 0px rgba(0, 0, 0, 0.07),
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 @media screen and (max-width: 1200px) {
@@ -710,7 +709,7 @@ header .header-basket {
     border-radius: 25px;
     background: linear-gradient(222deg, #20222f 9.49%, #303445 92.39%);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.5),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 .blogCard > p {
@@ -728,7 +727,7 @@ header .header-basket {
     padding: 0px 15px;
     background: linear-gradient(222deg, #20222f 9.49%, #303445 92.39%);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.5),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 .mobileCard > div > p {
@@ -792,25 +791,23 @@ header .header-basket {
     cursor: pointer;
     background: linear-gradient(222deg, #20222f 9.49%, #303445 92.39%);
     box-shadow: 0px 11px 25px 0px rgba(0, 0, 0, 0.44),
-    0px 45px 45px 0px rgba(0, 0, 0, 0.38),
-    0px 101px 60px 0px rgba(0, 0, 0, 0.23),
-    0px 179px 72px 0px rgba(0, 0, 0, 0.07),
-    0px 280px 78px 0px rgba(0, 0, 0, 0.01);
+        0px 45px 45px 0px rgba(0, 0, 0, 0.38),
+        0px 101px 60px 0px rgba(0, 0, 0, 0.23),
+        0px 179px 72px 0px rgba(0, 0, 0, 0.07),
+        0px 280px 78px 0px rgba(0, 0, 0, 0.01);
 }
 
 #faq .contentBox > div {
     gap: 3rem;
 }
 
-#faq .contentBox .content {
+#faq .contentBox .accordion-content {
     padding: 0 50px;
-    height: 0;
-    overflow: hidden;
-    overflow-y: auto;
+    display: none;
     transition: all 0.4s ease-in-out;
 }
 
-#faq .contentBox .content p {
+#faq .contentBox .accordion-content p {
     line-height: none;
     margin: 0;
 }
@@ -818,11 +815,6 @@ header .header-basket {
 #faq .contentBox.active {
     border-radius: 25px 25px 0 0;
 }
-
-#faq .contentBox.active .content {
-    height: 150px;
-}
-
 #faq .contentBox .acc_icon {
     width: 40px;
     height: 40px;
@@ -891,7 +883,7 @@ header .header-basket {
     .responsive_table tr {
         border-bottom: 3px solid #ddd;
         display: block;
-        margin-bottom: .625em;
+        margin-bottom: 0.625em;
     }
 
     .responsive_table td {
