--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -329,6 +329,18 @@ header .header-basket {
     display: flex;
     align-items: center;
 }
+.vertical-slider {
+    height: 50px;
+    overflow: hidden;
+}
+
+.vertical-slider h1 {
+    margin: 0;
+    padding: 10px 0;
+    font-size: 24px;
+    transform: translateY(0);
+    transition: transform 0.5s ease;
+}
 
 .gra {
     position: absolute;
