--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -321,17 +321,18 @@ header .header-basket {
     background-color: var(--nav-color);
     position: absolute;
     max-width: 250px;
-    opacity: 0;
-    transition: all 0.3s ease-in;
-    top: 0px;
+    top: 60px;
+    overflow: hidden;
     left: 40%;
     padding: 10px;
     border-radius: 10px;
-    z-index: -1000;
+    opacity: 0;
+    height: 0;
+    transition: all 0.1s ease-in;
 }
 #roadmapPopup.active {
-    top: 70px;
     opacity: 1;
+    height: 140px;
 }
 #roadmapPopup .front {
     background-color: #bf232359;
@@ -596,10 +597,12 @@ header .header-basket {
 }
 .swiper {
     width: 100%;
-    height: 350px;
+    height: 400px;
     max-height: 430px;
 }
-
+.swiper-wrapper{
+    max-height: 360px;
+}
 .swiper-slide {
     background-color: var(--nav-color);
     border-radius: 30px;
