--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -138,24 +138,32 @@ main {
 }
 
 /* Course Slider */
-.swiper{
-  height: 430px;
-  padding-bottom: 40px !important;
+.swiper {
+  height: 33rem;
 }
-.swiper-slide{
-  padding: 0;
+.swiper-wrapper {
+  max-height: 22rem;
+  padding-top: 52px;
+}
+.swiper-slide .courseBanner {
+  background-color: var(--nav-color);
+  position: absolute;
+  top: -50px;
+  width: 90%;
+  height: 120px;
   overflow: hidden;
-  align-items: start !important;
 }
-
-.swiper-slide .sliderBtn {
-  background-color: transparent;
-  border: 1px solid var(--primary-color);
+.swiper-slide h4 {
+  margin-top: 5.7rem;
+  font-size: 1.3rem;
 }
-
-.swiper-slide img{
-  max-height: 120px;
-  object-fit: cover;
+@media screen and (max-width: 768px) {
+  .swiper-wrapper a h5 {
+      font-size: 1.1rem;
+  }
+  .swiper-wrapper a p {
+      font-size: 0.9rem;
+  }
 }
 
 #mainContent h3 {
@@ -176,18 +184,18 @@ main {
   border-radius: 100%;
 }
 #mainContent .explain .exText {
-  height: 400px;
+  height: 100px;
   overflow: hidden;
+  margin-top: 20px;
   transition: all 0.4s;
 }
 #mainContent .more {
   position: absolute;
   width: 100%;
-  height: 50px;
-  background-color: #0b141b4f;
+  height: 40px;
   backdrop-filter: blur(5px);
   opacity: 1;
-  margin-top: -2%;
+  margin-top: -4%;
 }
 #mainContent .more button {
   background: transparent;
