--- a/public_html/frontend/css/roadmap.css
+++ b/public_html/frontend/css/roadmap.css
@@ -43,13 +43,18 @@ main {
   margin-left: -300px;
   margin-top: 55px;
 }
-#mainRoadmap iframe {
+#mainRoadmap .Roadvideo .video {
   border-radius: 100%;
   border: none;
   width: 150px;
   height: 150px;
   position: absolute;
+  overflow: hidden;
   left: 57px;
+}
+#mainRoadmap .Roadvideo .video iframe{
+  width: 100%;
+  height: 100%;
 }
 #mainRoadmap .RoadCourse {
   background: linear-gradient(
@@ -82,7 +87,7 @@ color:#f16529 ;
   margin-left: 0;
   margin-right: -300px;
 }
-#mainRoadmap .leftRoadmap .Roadvideo iframe {
+#mainRoadmap .leftRoadmap .Roadvideo .video {
   right: 57px;
 }
 #mainRoadmap .rightRoadmap {
