--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -187,18 +187,19 @@ main {
   height: 100px;
   overflow: hidden;
   margin-top: 20px;
-  transition: all 0.4s;
 }
 #mainContent .more {
   position: absolute;
   width: 100%;
   height: 40px;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(4px);
   opacity: 1;
   margin-top: -4%;
 }
-#mainContent .more button {
-  background: transparent;
+#mainContent .exText.open {
+  height: 100%;
+  margin-bottom: 5%;
+  transition: all 0.4s;
 }
 
 /* Q & A */
