--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -652,6 +652,10 @@ header .header-basket {
     top: -40px;
 }
 
+.swiper-slide .course-cover {
+    display: contents;
+}
+
 .swiper-pagination-bullet-active {
     background-color: var(--primary-color) !important;
 }
