--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -274,6 +274,10 @@ header .header-basket {
 }
 
 /* profile */
+.profile p{
+    font-family: "peyda" !important;
+    font-weight: 600;
+}
 .profile img {
     width: 50px;
     height: 50px;
