--- a/public_html/frontend/css/singleCourse.css
+++ b/public_html/frontend/css/singleCourse.css
@@ -197,12 +197,12 @@ main {
   border: 1px solid #23bf64;
   border-radius: 100%;
 }
-#mainContent .explain .exText {
+#mainContent .explain .descText {
   height: 100px;
   overflow: hidden;
   margin-top: 20px;
 }
-#mainContent .more {
+#mainContent .moreDesc {
   position: absolute;
   width: 100%;
   height: 40px;
@@ -210,7 +210,7 @@ main {
   opacity: 1;
   margin-top: -4%;
 }
-#mainContent .exText.open {
+#mainContent .descText.open {
   height: 100%;
   margin-bottom: 5%;
   transition: all 0.4s;
