Disable bookmarks items from header

--- a/public_html/frontend/css/main.css
+++ b/public_html/frontend/css/main.css
@@ -292,7 +292,7 @@ header .header-basket {
     display: none;
     min-width: 250px;
     left: 10px;
-    bottom: -330px;
+    top: 60px;
     overflow: hidden;
 }
 
